--- a/index.html
+++ b/index.html
@@ -13,52 +13,94 @@
   <body>
     <article class="container">
     <!-- Wellcome -->
-        <h1 class="text-uppercase">Welcome to Romanian!</h1>
-            <p class="lead">We offer free Romanian Language classes for free throughout Ireland.</p>
-            <p><button class="btn btn-lg btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Get in touch!</button></p>
+        <div class="row">
+            <div class="col-12">
+                <section class="callout">
+                    <h1 class="text-uppercase">Welcome to Romanian!</h1>
+                        <p class="lead">We offer free Romanian Language classes for free throughout Ireland.</p>
+                        <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Get in touch!</button>
+                </section>
+            </div>
+        </div>
     <!-- /.Wellcome -->
     <hr>
 
     <!-- Quote -->
-        <section class="quotes">
-            <h2 class="text-uppercase">Quote:</h2>
-            <blockquote class="quote">
-                <p>A new language is a new life.</p>
-                <footer>O limbă nouă este o viață nouă.</footer>
-            </blockquote>
-            <blockquote class="quote">
-                <p>Your home language can strengthen the bond between parent and child. 
-                We use our mother-tongue to speak the language of our heart. 
-                It is the language we speak best. The home language is a great gift 
-                that parents can pass on to their children.  Speaking their heritage language 
-                is a skill and resource that children will have for life.  Use your 
-                language to communicate with your child, the earlier you start the better, 
-                but remember it's never too late to begin."</p>
-            </blockquote>
+        <section class="quote">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Quote:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <blockquote class="blockquote">
+                        <!-- Image - multi-ethnic-transylvania.jpeg -->
+                    </blockquote>
+                </div>
+                <div class="col-12 col-md-6">
+                    <blockquote class="blockquote">
+                        <p>"Your home language can strengthen the bond between parent and child. 
+                        We use our mother-tongue to speak the language of our heart. 
+                        It is the language we speak best. The home language is a great gift 
+                        that parents can pass on to their children.  Speaking their heritage language 
+                        is a skill and resource that children will have for life.  Use your 
+                        language to communicate with your child, the earlier you start the better, 
+                        but remember it's never too late to begin."</p>
+                    </blockquote>
+                </div>
+            </div>
         </section>
 
     <!-- /.Quote -->
+    <hr>
+
     <!-- Features -->
         <section class="features">
-            <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>Study Romanian in your School</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Features:</h2>
+                </div>
             </div>
-            <div class="feature">
-                <h3>Choose Romanian for Leaving Cert</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Study Romanian in your School</h3>
+                        <p>The home language is the first language your child learns and plays a very 
+                        important role in the developement of your child's brain. Besides helping 
+                        children learn other languages and school subjects easier, it can help a lot
+                        to connect to their wider family, grandparents for example. You can introduce
+                        the Romanian Language, Culture, and Civilization course in your school child's 
+                        school.</p>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
             </div>
-            <div class="feature">
-                <h3>Enroll for the Romanian Summer Camp</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Choose Romanian for Leaving Cert</h3>
+                        <p>Why don't you choose your native language as one of the Leaving Certificate 
+                        subjects? As a higher level extra subject, it could give you a great advantage 
+                        and extra points. Strat preparing now!</p>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Enroll for the Romanian Summer Camp</h3>
+                        <p>The Romanian Summer Camp takes places between June 29 and July 10, 
+                        and is for secondary school students, aged between 12-17 years of age. .</p>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
             </div>
         </section>
 
     <!-- /.Features -->
+    <hr>
     </article>
 
     <!-- Optional JavaScript -->
